# bepinex_installer

./: Cargo.toml
src/: game.rs  install.rs  linux_utils.rs  main.rs  types.rs  win_utils.rs
